query tasks by user name
