# service/src/main/java/com/hahooy/todo/dataentities/TaskByUsernameEntity.java
@@ -2,8 +2,6 @@ package com.hahooy.todo.dataentities;
 
 import lombok.Builder;
 import lombok.Value;
-import org.springframework.data.cassandra.core.mapping.PrimaryKey;
-import org.springframework.data.cassandra.core.mapping.PrimaryKeyClass;
 import org.springframework.data.cassandra.core.mapping.PrimaryKeyColumn;
 import org.springframework.data.cassandra.core.mapping.Table;
 
@@ -18,18 +16,9 @@ import static org.springframework.data.cassandra.core.cql.PrimaryKeyType.PARTITI
 @Table("tasks_by_username")
 public class TaskByUsernameEntity {
 
-    @PrimaryKey
-    TaskByUsernamePrimaryKey primaryKey;
+    @PrimaryKeyColumn(ordinal = 0, type = PARTITIONED)
+    String username;
 
-    @Value
-    @Builder
-    @PrimaryKeyClass
-    public static class TaskByUsernamePrimaryKey {
-
-        @PrimaryKeyColumn(ordinal = 0, type = PARTITIONED)
-        String username;
-
-        @PrimaryKeyColumn(name = "task_id", ordinal = 1, type = CLUSTERED, ordering = DESCENDING)
-        UUID taskId;
-    }
+    @PrimaryKeyColumn(name = "task_id", ordinal = 1, type = CLUSTERED, ordering = DESCENDING)
+    UUID taskId;
 }
